# pyTrackMateXML

./: .gitignore  README.md  pyproject.toml  requirements.txt  trackmatexml.py
.github/workflows/: black.yml  mypy.yml  pytest.yml
examples/: demo_PyTrackMateXML.ipynb
tests/: test_loadfile.py
tests/testdata/: FakeTracks.xml  datainfo.toml
trackmatexml/: TrackmateXML.py  __init__.py
