[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTrackMateXML"
version = "1.0.0"
description = "Open TrackMateXML files in Python"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["trackmate", "fiji", "imagej", "tracking", "cells"]
dependencies = [
    "lxml",
    "numpy",
]
requires-python = ">=3.11"
[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "mypy", "lxml-stubs"]

[tool.mypy]
python_version = '3.11'
packages = "trackmatexml"
strict = true

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"trackmatexml/version.py" = [
    "{version}"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]